# utcp-policy

./: .gitignore  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md
definition/: gcl.yaml
docs/: exchange-home.md
playground/: docker-compose.yaml
playground/config/: api.yaml  logging.yaml
playground/config/custom-policies/: note.txt
src/: audit.rs  config.rs  lib.rs  manual_state.rs
src/manual/: mod.rs  model.rs  openapi.rs  overrides.rs  render.rs
src/validate/: mod.rs  router.rs  schema.rs
tests/: openapi_to_manual.rs  petstore.json
