[package]
name = "utcp_manual_validator"
version = "0.3.1"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.anypoint]
group_id = "f684513f-280e-403a-ac53-80ca62e3de49"
definition_asset_id = "utcp-manual-validator-policy"
implementation_asset_id = "utcp-manual-validator-policy-impl"

[dependencies]
pdk = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
url = "2"
percent-encoding = "2"

[dev-dependencies]
pdk-unit = "1.8.0"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
